# napari-hierarchical

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_bioimage/: __init__.py  __main__.py  _bioimage_controller.py  _controller.py  _exceptions.py  _plugins.py  _reader.py  hookspecs.py  model.py  napari.yaml
src/napari_bioimage/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
src/napari_bioimage/contrib/hdf5/: __init__.py  _reader.py  _writer.py  model.py
src/napari_bioimage/contrib/imc/: __init__.py  _exceptions.py  _reader.py  model.py
src/napari_bioimage/contrib/imc/model/: __init__.py  _image.py  _layer.py
src/napari_bioimage/contrib/napari/: __init__.py  _reader.py
src/napari_bioimage/contrib/ome_zarr/: __init__.py  _exceptions.py  _reader.py  _writer.py  model.py  writer.py
src/napari_bioimage/contrib/ome_zarr/model/: __init__.py  _image.py  _layer.py  _zarr_image_layer.py
src/napari_bioimage/contrib/zarr/: __init__.py  _reader.py  _writer.py  model.py  reader.py  writer.py
src/napari_bioimage/contrib/zarr/data/: _zarr_image.py  _zarr_labels_layer.py  _zarr_layer.py
src/napari_bioimage/contrib/zarr/model/: __init__.py
src/napari_bioimage/data/: __init__.py  _group.py  _image.py  _layer.py
src/napari_bioimage/model/: __init__.py  _group.py  _image.py  _layer.py
src/napari_bioimage/sample_data/: idr0052A.py  imc_mock.py  pollen.py
src/napari_bioimage/widgets/: __init__.py  _bioimage_widget.py  _image_tree_model.py  _image_tree_widget.py  _images_widget.py  _layer_grouping_model.py  _layer_grouping_widget.py  _layer_groupings_widget.py  _layer_groups_list_model.py  _layer_groups_list_widget.py  _layer_groups_widget.py  _layer_properties_widget.py  _layers_widget.py
src/napari_dataset/: __init__.py  _controller.py  _exceptions.py  _reader.py  hookspecs.py  model.py  napari.yaml
src/napari_dataset/contrib/hdf5/: __init__.py  _reader.py  _writer.py  model.py
src/napari_dataset/contrib/imc/: __init__.py  _reader.py  model.py
src/napari_dataset/contrib/ome_zarr/: __init__.py  _reader.py  _writer.py  model.py
src/napari_dataset/contrib/zarr/: __init__.py  _reader.py  _writer.py  model.py
src/napari_dataset/model/: __init__.py  _model.py  parent_aware.py
src/napari_dataset/sample_data/: idr0052A.py  imc_mock.py  pollen.py
src/napari_dataset/utils/: parent_aware.py
src/napari_dataset/widgets/: __init__.py  _dataset_tree_model.py  _dataset_tree_view.py  _dataset_tree_widget.py  _datasets_widget.py  _layer_group_table_model.py  _layer_group_table_view.py  _layer_group_table_views_tab_widget.py  _layer_grouping_list_model.py  _layer_grouping_list_view.py  _layer_grouping_list_widget.py  _layer_groupings_tab_widget.py  _layer_groupings_widget.py  _layer_groups_widget.py  _layers_widget.py
src/napari_hierarchical/: __init__.py  _controller.py  _reader.py  hookspecs.py  model.py  napari.yaml
src/napari_hierarchical/contrib/hdf5/: __init__.py  _reader.py  _writer.py  model.py
src/napari_hierarchical/contrib/imc/: __init__.py  _reader.py  model.py
src/napari_hierarchical/contrib/netcdf4/: __init__.py  _reader.py  _writer.py
src/napari_hierarchical/contrib/zarr/: __init__.py  _reader.py  _writer.py  model.py
src/napari_hierarchical/sample_data/: idr0052A.py  imc_mock.py  pollen.py
src/napari_hierarchical/utils/: parent_aware.py  proxy_image.py
src/napari_hierarchical/widgets/: __init__.py  _array_group_table_model.py  _array_group_table_view.py  _array_groups_tab_widget.py  _arrays_widget.py  _flat_array_grouping_tree_model.py  _flat_array_grouping_tree_view.py  _flat_array_groupings_tab_widget.py  _flat_grouping_tree_model.py  _flat_grouping_tree_view.py  _flat_groupings_tab_widget.py  _group_tree_model.py  _group_tree_view.py  _groups_widget.py
src/napari_hierarchical/widgets/resources/: __init__.py  resources.py  resources.qrc
src/napari_hierarchical/widgets/utils/: __init__.py  _icon_checkbox_delegate.py
