[metadata]
name = napari-dataset
description = Complex dataset support for napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BodenmillerGroup/napari-dataset
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
license = MIT
license_files = LICENSE
classifiers =
    Framework :: napari
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/BodenmillerGroup/napari-dataset/issues
    Documentation = https://github.com/BodenmillerGroup/napari-dataset#README.md
    Source Code = https://github.com/BodenmillerGroup/napari-dataset
    User Support = https://github.com/BodenmillerGroup/napari-dataset/issues

[options]
packages = find:
install_requires =
    napari
    pluggy
    qtpy
python_requires = >=3.8,<3.11
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-dataset = napari_dataset:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5
all =
    dask
    h5py
    ome-zarr
    readimc
    zarr
hdf5 =
    dask
    h5py
imc =
    readimc
ome_zarr =
    dask
    ome-zarr
zarr =
    dask
    zarr

[options.package_data]
* = *.yaml

[flake8]
max-line-length = 88
extend-ignore = E203
